--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <link rel="stylesheet" href="css/css.css">
   <link rel="icon" href="favicon_io/favicon.ico">
 
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -25,7 +25,9 @@
     <div class="profile">
       <img src="images/1.png" alt="solomon">
       <h2>Hello.</h2>
-      <p> <div class="Hello"> I am an IOS and Web Developer. I'm the founder and CTO of The App Brewery. I love coffee and brew my own beers.</div> </p>
+      <p>
+      <div class="Hello"> I am an IOS and Web Developer. I'm the founder and CTO of The App Brewery. I love coffee and brew my own beers.</div>
+      </p>
     </div>
 
     <hr>
@@ -51,8 +53,10 @@
 
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-      <p>Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+      <h3>If you love hot wings as much as i do.</h3>
+      <div class="contact-msg">
+        <p>Love hot wings as much as i do? Let's talk about how awesome they are! We can code whiles we eat hoot wings!</p>
+      </div>
       <a class="btn" href="mailto:solomon.asante62@email.com">CONTACT ME</a>
     </div>
   </div>
@@ -61,7 +65,7 @@
   <div class="bottombox">
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <a class="footer-link" href="https://www.inspiredgh.com/">Website</a>
     <p class="solo">© Solomon Asante.</p>
   </div>
 
