--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
     <a class="footer-link" href="https://twitter.com/">Twitter</a>
     <a class="footer-link" href="https://www.inspiredgh.com/">Website</a>
-    <p class="solo">© Solomon Asante.</p>
+    <p class="solo">©2023 Solomon Asante@InspiredGH.</p>
   </div>
 
 </body>
